src/objects/c2g__TransactionReconciliationFilter__c.object
<CustomObject>
    <description>Stores a filter used by transaction reconciliation.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TransactionReconciliationFilters</relationshipLabel>
        <relationshipName>TransactionReconciliationFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__FilterCriteria__c</fullName>
        <label>Filter Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiselect</fullName>
                </value>
                <value>
                    <fullName>From</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>TransactionReconciliationFilters</relationshipLabel>
        <relationshipName>TransactionReconciliationFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>TransactionReconciliationFilters</relationshipLabel>
        <relationshipName>TransactionReconciliationFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionReconciliationFilterStructure__c</fullName>
        <label>TransactionReconciliationFilterStructure</label>
        <referenceTo>c2g__TransactionReconciliationFilterStructure__c</referenceTo>
        <relationshipLabel>TransactionReconciliationFilters</relationshipLabel>
        <relationshipName>TransactionReconciliationFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Transaction Reconciliation Filter</label>
    <nameField>
        <displayFormat>TRF-{0000}</displayFormat>
        <label>Transaction Reconciliation Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TransactionReconciliationFilters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>